# bitmap-parser-rust

./: Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs
lib/: Cargo.toml
lib/src/: bitmap.rs  error.rs
src/: bitmap.rs  main.rs
